package game.npc;

public abstract class AbstractWarrior implements Npc{

}
