package game.npc;

public interface Npc {

}
