package game.npc;

public class Seller extends AbstractSeller {

}
